--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_bjkappicon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -21,6 +21,7 @@
         </activity>
 
         <activity
+            android:theme="@style/NewsFeedTheme"
             android:name=".FeedActivityMain"
             android:label="@string/app_name" >
         </activity>
