Improved webview performance.Some bugs is fixed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity
             android:name=".DisplayContentActivity"
             android:launchMode="standard"
+            android:hardwareAccelerated="true"
              />
 
     </application>
