--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,12 @@
              />
 
         <activity
-            android:name=".ShowContentActivity"
+            android:name=".NtvSporContentActivity"
+            android:label="@string/app_name"
+            android:theme="@style/NewsFeedTheme"></activity>
+
+        <activity
+            android:name=".AsporContentActivity"
             android:label="@string/app_name"
             android:theme="@style/NewsFeedTheme"></activity>
 
