--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,11 @@
             android:label="@string/app_name"
             android:theme="@style/NewsFeedTheme"></activity>
 
+        <activity
+            android:name=".HaberTurkContentActivity"
+            android:label="@string/app_name"
+            android:theme="@style/NewsFeedTheme"></activity>
+
     </application>
 
 </manifest>
