--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
             android:label="@string/app_name"
             android:theme="@style/NewsFeedTheme"></activity>
 
+        <activity
+            android:name=".LigTvContentActivity"
+            android:label="@string/app_name"
+            android:theme="@style/NewsFeedTheme"></activity>
+
     </application>
 
 </manifest>
