--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,32 +39,38 @@
         <activity
             android:name=".NtvSporContentActivity"
             android:label="@string/app_name"
-            android:theme="@style/NewsFeedTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".FeedActivityMain"></activity>
 
         <activity
             android:name=".AsporContentActivity"
             android:label="@string/app_name"
-            android:theme="@style/NewsFeedTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".FeedActivityMain"></activity>
 
         <activity
             android:name=".SabahContentActivity"
             android:label="@string/app_name"
-            android:theme="@style/NewsFeedTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".FeedActivityMain"></activity>
 
         <activity
             android:name=".HaberTurkContentActivity"
             android:label="@string/app_name"
-            android:theme="@style/NewsFeedTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".FeedActivityMain"></activity>
 
         <activity
             android:name=".LigTvContentActivity"
             android:label="@string/app_name"
-            android:theme="@style/NewsFeedTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".FeedActivityMain"></activity>
 
         <activity
             android:name=".FotomacContentActivity"
             android:label="@string/app_name"
-            android:theme="@style/NewsFeedTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".FeedActivityMain"></activity>
 
     </application>
 
