--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tech.ozak.bjkhaber">
+    package="tech.ozak.sportmix">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- Include following permission if you want to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <meta-data android:name="tech.ozak.bjkhaber.glideModule.GlideConfiguration"
+    <meta-data android:name="tech.ozak.sportmix.glideModule.GlideConfiguration"
         android:value="GlideModule"/>
 
     <application
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name="tech.ozak.sportmix.SplashActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,51 +26,51 @@
         </activity>
 
         <activity
-            android:name=".ListActivity"
+            android:name="tech.ozak.sportmix.ListActivity"
             android:label="@string/app_name"
             android:theme="@style/SplashActivityTheme"></activity>
 
         <activity
-            android:name=".DisplayContentActivity"
+            android:name="tech.ozak.sportmix.DisplayContentActivity"
             android:launchMode="standard"
             android:hardwareAccelerated="true"
              />
 
         <activity
-            android:name=".NtvSporContentActivity"
+            android:name="tech.ozak.sportmix.NtvSporContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".ListActivity"></activity>
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
         <activity
-            android:name=".AsporContentActivity"
+            android:name="tech.ozak.sportmix.AsporContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".ListActivity"></activity>
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
         <activity
-            android:name=".SabahContentActivity"
+            android:name="tech.ozak.sportmix.SabahContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".ListActivity"></activity>
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
         <activity
-            android:name=".HaberTurkContentActivity"
+            android:name="tech.ozak.sportmix.HaberTurkContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".ListActivity"></activity>
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
         <activity
-            android:name=".LigTvContentActivity"
+            android:name="tech.ozak.sportmix.LigTvContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".ListActivity"></activity>
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
         <activity
-            android:name=".FotomacContentActivity"
+            android:name="tech.ozak.sportmix.FotomacContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".ListActivity"></activity>
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
     </application>
 
