--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.ozak.sportmix"
-    android:versionCode="1"
-    android:versionName="1.0">
+    android:versionCode="2"
+    android:versionName="1.1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -45,7 +45,7 @@
             android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
         <activity
-            android:name="tech.ozak.sportmix.AsporContentActivity"
+            android:name=".TrtsporContentActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
