--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,12 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
 
+        <activity
+            android:name="tech.ozak.sportmix.SporxContentActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName="tech.ozak.sportmix.ListActivity"></activity>
+
     </application>
 
 </manifest>
