--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.3"
     useLibrary  'org.apache.http.legacy'
     defaultConfig {
         applicationId 'tech.ozak.spormix'
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.1.0"
+        versionCode 5
+        versionName "1.1.3"
     }
     buildTypes {
         release {
@@ -31,8 +31,8 @@ repositories {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
+   /* compile fileTree(dir: 'libs', include: ['*.jar'])*/
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.github.d-max:spots-dialog:0.4@aar'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.github.bumptech.glide:glide:3.6.1'
@@ -43,4 +43,6 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.16'
     compile 'com.antonionicolaspina:revealtextview:2.0'
+    compile 'com.google.android.gms:play-services-ads:9.0.2'
+    compile fileTree(dir: 'libs', include: ['avocarrot-sdk-*.jar'])
 }
