--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId 'tech.ozak.spormix'
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 5
-        versionName "1.1.3"
+        versionCode 6
+        versionName "1.1.4"
     }
     buildTypes {
         release {
@@ -43,6 +43,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.16'
     compile 'com.antonionicolaspina:revealtextview:2.0'
-    compile 'com.google.android.gms:play-services-ads:9.0.2'
-    compile fileTree(dir: 'libs', include: ['avocarrot-sdk-*.jar'])
+    compile 'com.thefinestartist:finestwebview:1.2.7'
+    compile 'com.facebook.android:audience-network-sdk:4.+'
+    
 }
