--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId 'tech.ozak.spormix'
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.1.4"
+        versionCode 7
+        versionName "1.1.41"
     }
     buildTypes {
         release {
@@ -39,12 +39,10 @@ dependencies {
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
-    compile 'com.nineoldandroids:library:2.4.0'
     compile 'org.jsoup:jsoup:1.8.3'
-    compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.16'
-    compile 'com.antonionicolaspina:revealtextview:2.0'
     compile 'com.thefinestartist:finestwebview:1.2.7'
     compile 'com.facebook.android:audience-network-sdk:4.+'
     compile group: 'com.rometools', name: 'rome', version: '1.7.0'
+    compile 'hanks.xyz:htextview-library:0.1.5'
     
 }
